:pull: https://github.com/elastic/apm-server/pull/

https://github.com/elastic/apm-server/compare/6.3\...master[View commits]

[float]
=== Added

- Change `frontend` to `rum` in config file, but still support `frontend` for backwards compatibility {pull}1155[1155].
- Support `rum` and `client-side` endpoint for RUM for backwards compatibility {pull}1155[1155].
- Listen on default port 8200 if unspecified {pull}886[886].
- Update Go to 1.10.3 {pull}1054[1054].
- Combine `apm-server.yml` and `apm-server.reference.yml` into one file {pull}958[958].
- Add optional tracing for the server's API and event publisher {pull}816[816].
- Read sourcemap content and fill context lines {pull}972[972].
- Add /v1/metrics endpoint {pull}1000[1000].
- Remove regexProperties validation rules {pull}1148[1148], {pull}1150[1150].
- Add source_mapping.elasticsearch configuration option {pull}1114[1114].
- Add /v1/metrics endpoint {pull}1000[1000] {pull}1121[1121].


[[release-notes-6.3]]
== APM Server version 6.3

https://github.com/elastic/apm-server/compare/6.2\...6.3[View commits]

* <<release-notes-6.3.1>>
* <<release-notes-6.3.0>>


[[release-notes-6.3.1]]
=== APM Server version 6.3.1

https://github.com/elastic/apm-server/compare/v6.3.0\...v6.3.1[View commits]

No significant changes.


[[release-notes-6.3.0]]
=== APM Server version 6.3.0

https://github.com/elastic/apm-server/compare/v6.2.4\...v6.3.0[View commits]

[float]
==== Bug fixes

- Accept charset in request's content type {pull}677[677].
- Use type integer instead of number in JSON schemas where applicable {pull}641[641].
- Set array item types to string in JSON schemas {pull}651[651].
- Fix issue preventing server from being stopped {pull}704[704].
- Limit the amount of concurrent requests being processed {pull}731[731].
- Return proper response code for request entity too large {pull}862[862].